--- a/styles/_container.scss
+++ b/styles/_container.scss
@@ -2,4 +2,17 @@
   background-image: url('~/assets/home/background-home-mobile.jpg');
   width: 100vw;
   height: 100vh;
+  padding: 1.6em 1.6em 3.2em;
+
+  &__menu {
+    margin-bottom: 3.2em;
+  }
+
+  &__largeBtn {
+    width: 10em;
+    height: 10em;
+    display: block;
+    margin: 0 auto;
+    margin-top: 5.4em;
+  }
 }
