--- a/styles/_menu.scss
+++ b/styles/_menu.scss
@@ -1,6 +1,20 @@
 .menu {
+
   &__logo {
-    width: 40px;
-    height: 40px;
+    width: 2.66em;
+    height: 2.66em;
+  }
+
+  &__hamburger {
+    width: 1.6em;
+    height: 1.4em;
+  }
+
+  &__dropdownMenu {
+    width: 66%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    right: 0;
   }
 }
