--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -7,6 +7,7 @@ $color-white: hsl(0, 0%, 100%);
 $fs-900: 5rem;
 $fs-800: 3.5rem;
 $fs-700: 1.5rem;
+$fs-650: 1.25rem;
 $fs-600: 1rem;
 $fs-500: 1.75rem;
 $fs-400: 0.9375rem;
