--- a/styles/main.scss
+++ b/styles/main.scss
@@ -2,3 +2,9 @@
 @import "globals";
 @import "container";
 @import "menu";
+@import "nav";
+@import "intro";
+@import "largeBtn";
+@import "dropdownMenu";
+@import "navList";
+@import "navLink";
