--- a/styles/_dropdownMenu.scss
+++ b/styles/_dropdownMenu.scss
@@ -6,10 +6,17 @@
   &__closeBtn {
     width: 1.26em;
     height: 1.26em;
-    margin-top: 2.26em;
-    margin-right: 1.76em;
     margin-left: auto;
+    margin-right: 1.8em;
     display: block;
+  }
+
+  &__nav {
+    padding-top: 4.333em;
+  }
+
+  &__item {
+    margin-bottom: 2.133em;
   }
 }
 
