--- a/styles/_menu.scss
+++ b/styles/_menu.scss
@@ -16,5 +16,10 @@
     position: absolute;
     top: 0;
     right: 0;
+    padding-top: 2.266em;
+
+    &--hidden {
+      right: -100%;
+    }
   }
 }
