--- a/styles/_navLink.scss
+++ b/styles/_navLink.scss
@@ -7,7 +7,22 @@
   color: $color-white;
   text-decoration: none;
 
-  &--num {
-    font-weight: 900;
+  &:focus {
+    color: $color-blue;
+  }
+}
+
+@for $index from 1 to 5 {
+  .dropdownMenu__item:nth-child(#{$index}) > .navlink::before {
+    content: '0#{$index}';
+    font-family: $ff-sans-condens;
+    font-size: $fs-300;
+    letter-spacing: 0.1687rem;
+    line-height: 1.1875;
+    text-transform: uppercase;
+    color: $color-white;
+    text-decoration: none;
+    font-weight: 700;
+    padding-right: 0.75em;
   }
 }
