--- a/styles/_dropdownMenu.scss
+++ b/styles/_dropdownMenu.scss
@@ -2,6 +2,7 @@
   background-color: rgba(255, 255, 255, 0.04);
   -webkit-backdrop-filter: blur(81.5485px);
   backdrop-filter: blur(81.5485px);
+  overflow: hidden;
 
   &__closeBtn {
     width: 1.26em;
