--- a/styles/_globals.scss
+++ b/styles/_globals.scss
@@ -33,7 +33,7 @@ body {
   overflow-x: hidden;
   padding: 0;
   font-family: $ff-sans-normal;
-  font-size: $fs-400;
+  font-size: var(--fs-400);
   line-height: 1.5;
   color: $color-white;
   background-color: $color-dark;
@@ -85,4 +85,12 @@ ol {
 
 .jc-sb {
   justify-content: space-between;
+}
+
+.ai-c {
+  align-items: center;
+}
+
+.grid {
+  display: grid;
 }
