Mod styles: add desctop style for Home page

--- a/styles/_globals.scss
+++ b/styles/_globals.scss
@@ -91,6 +91,10 @@ ol {
   align-items: center;
 }
 
-.grid {
-  display: grid;
+.jc-sa {
+  justify-content: space-around;
+}
+
+.ai-fe {
+  align-items: flex-end;
 }
