--- a/styles/blocks/_largeBtnText.scss
+++ b/styles/blocks/_largeBtnText.scss
@@ -6,6 +6,10 @@
   text-transform: uppercase;
   color: $color-dark;
   text-decoration: none;
+  background-color: $color-white;
+  border-radius: 50%;
+  text-align: center;
+  vertical-align: middle;
 
   @include breakpoint-up(medium) {
     letter-spacing: 0.125rem;
