--- a/styles/blocks/_largeBtn.scss
+++ b/styles/blocks/_largeBtn.scss
@@ -13,7 +13,7 @@
       height: 7.5625em;
       margin-top: 4.875em;
 
-      &:hover::before {
+      &::before {
         content: '';
         display: block;
         position: absolute;
@@ -25,6 +25,11 @@
         height: 164%;
         background-color: $color-white;
         mix-blend-mode: normal;
+        opacity: 0;
+        transition: all 0.3s ease-in;
+      }
+
+      &:hover::before {
         opacity: 0.1;
       }
     }
