--- a/styles/blocks/_header.scss
+++ b/styles/blocks/_header.scss
@@ -14,9 +14,11 @@
     width: 66%;
     height: 100%;
     position: absolute;
+    z-index: 10;
     top: 0;
     right: 0;
     padding-top: 2.266em;
+    transition: all 0.6s ease-in;
 
     &--hidden {
       right: -100%;
