--- a/styles/blocks/_navCurrentItem.scss
+++ b/styles/blocks/_navCurrentItem.scss
@@ -1,6 +1,12 @@
 .navCurrentItem {
   border-right: 4px solid $color-white;
 
+  &__navlink {
+    &:hover {
+      cursor: text;
+    }
+  }
+
   @include breakpoint-up(medium) {
     border-right: none;
     border-bottom: 3px solid $color-white;
